...
            .fillMaxHeight()
            .padding(
                start = 16.dp,
                end = 16.dp,
                top = 16.dp
            )
            .testTag("user_page")
    ) {
        when (state.displayStateUser) {
            UserViewModel.State.DisplayState.Content -> {
                state.user?.let {
                    DetailSection(model = it)
                }
...
